<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="username_text">USERNAME</string>
    <string name="password_text">PASSWORD</string>
    <string name="income_text">Income</string>
    <string name="expenses_text">Expenses</string>
    <string name="savings_text">Savings</string>
    <string name="investment_news_text">Investment News</string>
    <string name="register_your_details_text">Register Your Details</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="email_id_text">Email Id</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="password_register_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="date_of_birth_text">Date Of Birth</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="save_text">Save</string>
    <string name="help_text">Help</string>
    <string name="business_fragment">Business</string>
    <string name="others_fragment">Others</string>
    <string name="salary_fragment">Salary</string>
    <string name="salary_text">Salary</string>
    <string name="business_text">Business</string>
    <string name="others_text">Others</string>
    <string name="income_help_text">Help</string>
    <string name="reports_email_text">Reports Email</string>
    <string name="call_adviser_text">Call Adviser</string>
    <string name="send_message_text">Send Message</string>
    <string name="toast_text_save_button">Details saved Successfully....</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in_string">Sign In</string>
    <string name="nalini_text">Nalini</string>
    <string name="pnaliniaug222_gmail_com_text">pnaliniaug222@gmail.com</string>
    <string name="open_camera_text">Open Camera</string>
    <string name="gallery_text">Gallery</string>
    <string name="tools_text">Tools</string>
    <string name="communicate_text">Communicate</string>
    <string name="share_text">Share</string>
    <string name="log_out_text">Logout</string>

    <string name="add_photo_text">Add Photo</string>
    <string name="permission_enable_error_text">Permission Enable Error</string>
    <string name="camera_message_text">Camera Message</string>
    <string name="open_settings_text">Open Settings</string>
    <string name="text_no">Text No</string>


    <string-array name="image_options">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
        <item>Cancel</item>
    </string-array>

    <string name="skip_button">SKIP</string>
    <string name="done_button">DONE</string>
    <string name="title_activity_default_intro">DefaultIntro</string>
    <string name="splash_data_text">It will apper 2 sec....</string>
    <string name="splash_screen_text">Splash Screen</string>
    <string name="login_screen_text">Login Screen</string>
    <string name="login_data_text">After completed the splash screen login screen appear to user and user enter his login credentials</string>
    <string name="sign_in_screen_text">Sign In Screen</string>
    <string name="sign_in_data_text">Once user login with his credentials successfully Sign Page will appear</string>
    <string name="navigation_data_text">Once Entered into Sign in page just click on the toolbar uyou can click on toggle button</string>
    <string name="register_data_text">If user not register he/she will go the register screen and enter details save it.</string>
    <string name="register_screen_text">Register Screen</string>
    <string name="navigation_screen_text">Navigation in Sign in Screen</string>
    <string name="audio_recorder_text">Audio Recorder</string>
    <string name="scan_qr_code_text">Scan QR Code</string>
    <string name="list_text">List</string>
    <string name="voice_001_text">Voice 001</string>
    <string name="recorded_list_string">Recorded List</string>
    <string name="audio_recorder_string">Audio Recorder</string>
    <string name="no_recordings_found_text">No Recordings found.</string>


    <string name="email_text">Email</string>
    <string name="accounts_text">Accounts</string>
    <string name="error_valid_email_password_text">Inalid Email or Password</string>
    <string name="error_message_password_text">Enter Password</string>
    <string name="error_message_email"> Enter Valid Email</string>
    <string name="email_already_exist_text">Email already Exist</string>
    <string name="success_message">Success</string>
    <string name="password_match">Password Does not Match</string>
    <string name="error_message_date_of_birth">Enter Date of Birth</string>
    <string name="last_name_error_message">Enter Last Name</string>
    <string name="first_name_error_message">Enter First Name</string>
    <string name="mobile_number_error_text">Enter Mobile Number </string>
    <string name="login_text">Login</string>

    <string name="registration_text">Registration</string>
    <string name="forget_password_text">Forget Password</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="choose_gender_text">Choose Gender</string>
    <string name="password_txt">Password</string>
    <string name="enter_password_text">Enter Password</string>
    <string name="add_all_income_source_here_text">ADD ALL INCOME SOURCE HERE</string>
    <string name="select_incoome_source_text">Select Incoome Source</string>
    <string name="enter_amount_text">Enter Amount</string>
    <string name="add_income_text">ADD INCOME</string>
    <string name="view_all_incomes_text">VIEW ALL INCOMES</string>
    <string name="edit_income_text">EDIT INCOME</string>
    <string name="update_text">Update</string>
    <string name="inr_40000_text">INR 40000</string>
    <string name="date_and_time_text">DATE AND TIME</string>
    <string name="_2017_09_30_10_00_00_text">2017-09-30 10:00:00</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="edit_expenses_text">Edit Expenses</string>
    <string name="add_all_expenses_sources_here_text">Add all expenses sources here</string>
    <string name="select_expense_source_text">Select Expense Source</string>
    <string name="view_all_expenses_text">View All Expenses</string>
    <string name="add_expenses_text">Add Expenses</string>
    <string name="scan_qr_code_txt">Scan QR Code</string>
    <string name="address_text">Address</string>
    <string name="users_list_text">Users List</string>
    <string name="income_source_details_text">Income Source Details</string>
    <string name="expense_source_details_text">Expenses Source Details</string>
    <string name="name_text">Name</string>
    <string name="bar_graph_text">Bar graph</string>
    <string name="point_graph_text">Point Graph</string>
    <string name="line_graph_text">Line graph</string>
    <string name="house_rent_text">House Rent</string>
    <string name="income_source_text">Income Source</string>


    <array name="source">
        <item>Salary</item>
        <item>Business</item>
        <item>Rent</item>
        <item>Others</item>
    </array>


    <array name="expenses_list">
        <item>House Rent</item>
        <item>Food</item>
        <item>Water and power Bill</item>
        <item>Grocery</item>
        <item>Travelling</item>
        <item>others</item>
    </array>



    <string name="help_description_text">Welcome to Expense Tracker. Expense Tracker is a simple daily expense tracking application. Allows you to monitor your spending pattern.</string>
    <string name="registration_description_text">First of all you need to Enter your all details.After that click save button.</string>
    <string name="authentication_text">Once you want to login the App authentication details are mandatory.</string>



    <string name="welcome_text">WELCOME</string>
    <string name="qr_code_text">QR Code</string>
    <string name="total_incomes_text">Total Incomes</string>
    <string name="enter_total_incomes_text">Enter Total Incomes</string>
    <string name="total_expenses_text">Total Expenses</string>
    <string name="enter_total_expenses_text">Enter Total Expenses</string>
    <string name="total_savings_text">Total Savings</string>
    <string name="authentication_details_text">Authentication Details</string>
    <string name="expense_tracker_text">Expense Tracker</string>
    <string name="getting_started_text">Getting Started</string>
    <string name="scan_result_for_qr_code_text">SCAN RESULT FOR QR CODE</string>
    <string name="xyz_text">XYZ</string>
    <string name="already_a_member_login_text">Already a member? Login</string>
</resources>
