<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/open_camera_text" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery_text" />
        <item
            android:id="@+id/slide_show"
            android:title="Slide Show"
            android:icon="@drawable/ic_menu_slideshow"/>

        <item
            android:id="@+id/nav_audio_recorder"
            android:icon="@drawable/ic_audio_recorder_image"
            android:title="@string/audio_recorder_text" />
        <item
            android:id="@+id/nav_qr_code_scanner"
            android:icon="@drawable/ic_qr_code_scanner_image"
            android:title="@string/scan_qr_code_text" />

    </group>

    <item android:title="@string/communicate_text">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_text" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out_text" />
        </menu>
    </item>

</menu>
