<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="silajit.com.expensetracker.HelpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="@dimen/dimen_10"
        android:textSize="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        android:textColor="@color/colorPrimary"
        android:text="@string/expense_tracker_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/help_description_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started_text"
            android:textSize="@dimen/dimen_20"
            android:layout_marginLeft="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/colorPrimary"
            android:text="@string/register_your_details_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/dimen_20"
            android:text="@string/registration_description_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/colorPrimary"
            android:text="@string/authentication_details_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/authentication_text"/>



    </LinearLayout>
    </ScrollView>

</RelativeLayout>
