<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/colorPrimary"
    android:padding="@dimen/dimen_10">

    <LinearLayout
        android:layout_width="@dimen/dimen_230dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewIncomeSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_source_text"
            android:layout_marginTop="@dimen/dimen_3"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textViewSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:textColor="@color/colorWhite"
            android:text="@string/inr_40000_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/date_and_time_text" />
        <TextView
            android:id="@+id/textViewJoiningDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:textColor="@color/colorWhite"
            android:text="@string/_2017_09_30_10_00_00_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonEditIncomeSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorWhite"
            android:text="@string/edit_text" />

        <Button
            android:id="@+id/buttonDeleteIncomeSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5"
            android:textColor="@color/colorWhite"
            android:background="@android:color/holo_red_light"
            android:text="@string/delete_text" />

    </LinearLayout>

</LinearLayout>